# ScoreBoard

./: .dockerignore  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.json
apps/api/: Cargo.toml  Dockerfile  _legacy_mysql_dump.sql  build.rs
apps/api/.sqlx/: query-062633d752433a4a3c9ffde12b1fe9b0a226f07a63c19c989664bcd80b4c8d20.json  query-132b803eb86874388a0eae11b304ba694b722c5c7d8ebd338b7cf5ca61c6833a.json  query-1496b35f26fa3aede67eff3b1d5cdb9551786a7e23a25a6ce43fe9e29a7dbc4a.json  query-17140e7dad10e4faccf28a64cdf415a8434619e2f24dea5da39bf6a67649fccb.json  query-185682f86625381e867d91fac2e9b4aef7c79bb8699895cef4eb6407d509b93a.json  query-22dfa1ba2bf247284ad207ec7a6ecc645daf842f9a5503ce04e10250b0f13249.json  query-235dc17a1c598548ad42059af3a236e72796180da8f559de82e2c18390057c99.json  query-26f150311c847c2e0fb247232cc1b4ee00fd76bf53effad8975ae41e1fb01666.json  query-2a8d71f68b0cddebe8de7c3c22748860bb67541cb93a39050dddf08d588915a8.json  query-2f7efa0ba5c31f08c1d3063e008d9f335c48110623f5f3b018606b5b2c1c7d8b.json  query-3005b346ff16acfedfbb686dabf5f8f854998bcdb717af44b3337d07699e4b47.json  query-4397addeb819241bb58cbb1bfd8499ebbd6f4a4d6e96a4180dc94299f1c7edf5.json  query-6ad703dbf7e141a462bb0417f459c13e9095d40ff74c6bf0426c83dcd016a42d.json  query-6b172e38ed9cec5d1bda50ca033c10831f31e0216b135c46b6a45db58e17ccef.json  query-7608c66f88b93ed86539bbe83f431ee24b6d02db6f7f7ad8d9bdb7f325d124b1.json  query-7ab6c8e010067585563243b6525f6ffac31dd0c4ca43f1c2363b7b7518d80b97.json  (+17 more)
apps/api/migrations/: 0001_init.sql  (+6 more)
(+153 files in other folders)
