[package]
name = "api"
version = "0.1.0"
# edition 2024 requires Rust >= 1.85. Run `rustup update stable` if cargo errors here.
# Downgrade to "2021" if you have an older Rust toolchain.
edition = "2024"

[dependencies]
# Web framework
axum       = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }   # axum-extra tracks axum: 0.10 = axum 0.8

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database (PostgreSQL with compile-time query checking)
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid", "chrono"] }

# Serialisation
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth
jsonwebtoken = "9"
bcrypt       = "0.15"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP middleware (cors, tracing) — tower-http 0.6 pairs with axum 0.8 / tower 0.5
tower-http = { version = "0.6", features = ["cors", "trace"] }

# HTTP types (header names used in CORS config)
http = "1"

# Observability
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SSE streaming
tokio-stream = "0.1"

# Timestamps
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"

[dev-dependencies]
# Integration test helper for axum 0.8
axum-test = "16"
